add documentation with swagger
